tests/negative/test_expr_call_arg_unty_bad_type.orb
fnc foo(x:u32) () {};

fnc main() () {
    foo -1;
};